# mqttgateway

./: CMakeLists.txt  README.md  conf.json  gateway.json  main_iotgw.c  main_iotutils.c
iotcmft/: iotgw_cmft.c  iotgw_cmft.h
mqtt/: iotgw.h  iotgw_mqtt_client.c  iotgw_mqtt_client.h
utils/: dbg_printf.h  iotgw_utils.c  iotgw_utils.h
